--- a/Solution1/UI/sdbi_MasterPage.master
+++ b/Solution1/UI/sdbi_MasterPage.master
@@ -5,16 +5,70 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title></title>
+    <title>山东商务职业学院考勤系统</title>
+    <style type="text/css">
+     #main{
+         width:1300px;
+         height:1000px;
+
+     }
+        #header {
+            width: 1300px;
+            height: 100px;
+            background-image:url(images/logo1.jpg);
+            background-repeat:no-repeat;
+            
+        }
+     #left{
+         width:250px;
+         height:800px;
+         background-image:url(images/logo8.jpg);
+             float:left;
+           
+              
+            
+     }
+     #concent{
+         width:1050px;
+         height:800px;
+         float:right;
+        background-image:url(images/logo6.jpg);
+        background-repeat:no-repeat;
+     
+     }
+     #fool{
+         width:1300px;
+         height:100px;
+         background-image:url(images/logo3.jpg);
+     }
+     #label1{
+         margin-left:1100px;
+         margin-top:50px;
+         font-weight:300;
+     }
+    </style>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body >
     <form id="form1" runat="server">
     <div>
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
+      <div id="main">
+         <div id="header">
+             <div id="label1">
+             <asp:Label ID="Label1" runat="server" Text="【切换用户】" OnDataBinding="Label1_DataBinding"></asp:Label>
+                 </div>
+          </div>
+          <div id="left">
+          </div>
+               <div id="concent">
+                    <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
         
-        </asp:ContentPlaceHolder>
+                     </asp:ContentPlaceHolder>
+               </div>
+          <div id="fool"></div>
+      </div>
+       
     </div>
     </form>
 </body>
