--- a/Solution1/UI/sdbi_MasterPage.master
+++ b/Solution1/UI/sdbi_MasterPage.master
@@ -10,6 +10,7 @@
      #main{
          width:1300px;
          height:1000px;
+         margin:0 auto;
 
      }
         #header {
@@ -33,7 +34,6 @@
          height:800px;
          float:right;
         background-image:url(images/logo6.jpg);
-        background-repeat:no-repeat;
      
      }
      #fool{
@@ -50,7 +50,7 @@
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body >
+<body>
     <form id="form1" runat="server">
     <div>
       <div id="main">
