--- a/Solution1/UI/sdbi_MasterPage.master
+++ b/Solution1/UI/sdbi_MasterPage.master
@@ -47,6 +47,11 @@
          font-weight:300;
      }
     </style>
+    <script type="text/javascript">
+    function display() {
+        window.location.href = "/页面/Default.aspx";
+        }
+</script>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -60,6 +65,8 @@
                  </div>
           </div>
           <div id="left">
+              <asp:TreeView ID="TreeView1" runat="server">
+              </asp:TreeView>
           </div>
                <div id="concent">
                     <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
