--- a/Solution1/UI/sdbi_MasterPage.master
+++ b/Solution1/UI/sdbi_MasterPage.master
@@ -49,7 +49,7 @@
     </style>
     <script type="text/javascript">
     function display() {
-        window.location.href = "/页面/Default.aspx";
+        window.location.href = "/login/login-form.aspx";
         }
 </script>
     <asp:ContentPlaceHolder id="head" runat="server">
