--- a/Solution1/UI/教师/sdbi_MasterPage.master
+++ b/Solution1/UI/教师/sdbi_MasterPage.master
@@ -16,14 +16,14 @@
         #header {
             width: 1300px;
             height: 100px;
-            background-image:url(images/logo1.jpg);
+            background-image:url(../images/logo1.jpg);
             background-repeat:no-repeat;
             
         }
      #left{
          width:250px;
          height:800px;
-         background-image:url(images/logo8.jpg);
+         background-image:url(../images/logo8.jpg);
              float:left;
            
               
@@ -33,13 +33,13 @@
          width:1050px;
          height:800px;
          float:right;
-        background-image:url(images/logo6.jpg);
+        background-image:url(../images/logo6.jpg);
      
      }
      #fool{
          width:1300px;
          height:100px;
-         background-image:url(images/logo3.jpg);
+         background-image:url(../images/logo3.jpg);
      }
      #label1{
          margin-left:1100px;
@@ -61,7 +61,7 @@
       <div id="main">
          <div id="header">
              <div id="label1">
-             <asp:Label ID="Label1" runat="server" Text="【切换用户】" OnDataBinding="Label1_DataBinding"></asp:Label>
+             <asp:Label ID="Label1" runat="server" Text="【切换用户】"></asp:Label>
                  </div>
           </div>
           <div id="left">
