--- a/Solution1/UI/管理员/sdbi_MasterPage.master
+++ b/Solution1/UI/管理员/sdbi_MasterPage.master
@@ -8,7 +8,7 @@
     <title>山东商务职业学院考勤系统</title>
     <style type="text/css">
     body{ margin:0 auto
-        padding:0px;
+        padding:0;
         }
      #main{
          width:1366px;
