--- a/Solution1/UI/教师/sdbi_MasterPage.master
+++ b/Solution1/UI/教师/sdbi_MasterPage.master
@@ -51,11 +51,10 @@
         float:left;
         background-image:url(../images/bottom.jpg);
      }
-    #png{
+     #png{
         width:131px;
         height:95px;
-         margin-left:1157px;
-        float:left;
+        float:right;
      }
         #left1{
         width:200px;
@@ -64,6 +63,14 @@
         }
         #TreeView1 {
         font-weight:bold;
+        }
+        #we {
+            width:50px;
+            float:right;
+            position:relative;
+            right:200px;
+            top:57px;
+            font-size:26px;
         }
     </style>
    <script type="text/javascript">
@@ -79,8 +86,12 @@
     <div>
       <div id="main">
          <div id="header">
-              <a>
-                            <img src="../images/top_3.jpg" id="imgmain" onclick="display()" /></a>
+             <div id="png">
+              <a> <img src="../images/top_3.jpg" id="imgmain" onclick="display()" /></a>
+             </div>
+                    <div id="we">
+                    <asp:Label ID="Label1" runat="server" Text="Label"></asp:Label>
+                    </div>
           </div>
           <div id="left">
               <div id="left1">
