--- a/Solution1/UI/领导/sdbi_MasterPage.master
+++ b/Solution1/UI/领导/sdbi_MasterPage.master
@@ -54,8 +54,7 @@
     #png{
         width:131px;
         height:95px;
-         margin-left:1157px;
-        float:left;
+        float:right;
      }
         #left1{
         width:200px;
@@ -64,6 +63,14 @@
         }
         #TreeView1 {
         font-weight:bold;
+        }
+        #we {
+            width:50px;
+            float:right;
+            position:relative;
+            right:200px;
+            top:57px;
+            font-size:26px;
         }
     </style>
    <script type="text/javascript">
@@ -83,6 +90,9 @@
                   <a>
                             <img src="../images/top_3.jpg" id="imgmain" onclick="display()" /></a>
                  </div>
+                    <div id="we">
+                    <asp:Label ID="Label1" runat="server" Text="Label"></asp:Label>
+                    </div>
           </div>
           <div id="left">
               <div id="left1">
