--- a/Solution1/UI/辅导员/sdbi_MasterPage.master
+++ b/Solution1/UI/辅导员/sdbi_MasterPage.master
@@ -22,7 +22,7 @@
             width: 1288px;
             height:95px;
             background-image:url(../images/top.jpg);
-            float:leftt;
+            float:left;
             
         }
      #left{
