--- a/Solution1/UI/教师/sdbi_MasterPage.master
+++ b/Solution1/UI/教师/sdbi_MasterPage.master
@@ -72,12 +72,26 @@
             top:57px;
             font-size:26px;
         }
+         #online {
+            float:right;
+            position:relative;
+            top:57px;
+        }
+        #Label2 {
+            font-size:28px;
+            font-weight:bold;
+            font-family:'Times New Roman', Times, serif;
+
+        }
+        #Label3 {
+            font-size:26px;
+        }
     </style>
-   <script type="text/javascript">
+   <%--<script type="text/javascript">
     function display(imgmain) {
         window.location.href = "/login/login-form.aspx";
         }
-</script>
+</script>--%>
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -87,11 +101,17 @@
       <div id="main">
          <div id="header">
              <div id="png">
-              <a> <img src="../images/top_3.jpg" id="imgmain" onclick="display()" /></a>
+              <a> 
+                   <asp:ImageButton ID="ImageButton1" runat="server" Height="93px" ImageUrl="~/images/top_3.jpg" OnClick="ImageButton1_Click" Width="129px" />
+                  <img src="../images/top_3.jpg" id="imgmain" onclick="display()" /></a>
              </div>
                     <div id="we">
                     <asp:Label ID="Label1" runat="server" Text="Label"></asp:Label>
                     </div>
+             <div id="online">
+                    <asp:Label ID="Label2" runat="server" Text="Label"></asp:Label>
+                    <asp:Label ID="Label3" runat="server" Text="Label"></asp:Label>
+                   </div>
           </div>
           <div id="left">
               <div id="left1">
